@@ -49,7 +49,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 121 new items:
+ - 122 new items:
   ~ 19 recovery/buff items:
    > Yellow Salve
    > Blueberry Sizzle
@@ -69,10 +69,11 @@ Additions:
    > Earl's Takeout
    > Medicated Eyedrops
    > Fire Resistance Potion
-  ~ 9 foodstuffs:
+  ~ 10 foodstuffs:
    > Olive Oil
    > Tomato
    > Milk
+   > Carrot Cake
    > Dragonfruit
    > Starfruit
    > Processed Oats
